Modi: modifi the html code according to the validator suggestion

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="Information about education, skills, ability and experience of Anjalee Kulasinghe as a potential employee.">
+        content="Information about education, skills, ability, and experience of Anjalee Kulasinghe as a potential employee.">
     <meta name="keywords" content="anjalee kulasinghe, cv, skill, education, experience">
     <meta name="author" content="Anjalee Kulasinghe">
 
@@ -19,10 +19,10 @@
 <body>
     <header>
         <nav class="navigation">
+            <!-- logo on the top left -->
+            <img src="./assets/images/LOGO_AK.jpg" alt="logo" class="logo">
             <!-- start of top navigation -->
             <ul>
-                <!-- logo on the top left -->
-                <img src="./assets/images/LOGO_AK.jpg" alt="logo" class="logo">
                 <li>
                     <a href="#main" aria-label="Go to the top of the page">Home</a>
                 </li>
@@ -58,10 +58,13 @@
             <!-- image on the left side -->
             <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
         </div>
+
         <div class="two-thirds-width-column vertical-center">
+            <div>
+                <h3>Hey there!</h3>
+            </div>
             <div id="welcome">
-                <p>Hey there!<br>
-                    My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
+                <p>My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
                     <strong style="color: #331D2C;"> ANJI. </strong>
                     <br>
                     I am a Business Expert and a Scrum Master at H&M Group.<br>
@@ -90,14 +93,14 @@
                     focusing on
                     full-price selling. </p><br>
                 <ul class="inside">
-                    <li>Creating business case, solving complex problems, requirement gathering and facilitating design
+                    <li>Creating business case, solving complex problems, requirement gathering, and facilitating design
                         thinking in supporting
                         the team to understand business needs, leading to a better product.</li>
                     <li>Guide the team and connect the stakeholders throughout developments. Building the bridge between
                         business and tech to
                         ease out communication and functional bottlenecks.</li>
                     <li>Responsible for creating the release notes related to the Replenishment product.</li>
-                    <li>Single Point Of Contact: When lanching the system to new markets. Organized and conduct the
+                    <li>Single Point Of Contact: When launching the system to new markets. Organized and conduct the
                         monthly
                         superuser forum to
                         stay close contact with the end users and stakeholders.</li>
@@ -113,39 +116,40 @@
                 <hr>
 
                 <ul class="inside">
-                    <li>Secured and optimized the best customer offering by curating site that meets commerciality,
+                    <li>Secured and optimized the best customer offering by curating a site that meets commerciality,
                         customers
-                        needs in line with H&M brand. Collaborate and align with the stories and local relevant content
+                        needs in line with the H&M brand. Collaborate and align with the stories and locally relevant
+                        content
                         to
                         ensure the omni
                         channel experience.</li>
                     <li>Knowledge related to consumer behavior and did the communication targeting the proper customer
                         group
                         via
-                        segmentation (what, who and when).</li>
+                        segmentation (what, who, and when).</li>
                     <li>Subject matter expert for AEM and SAP Hybris systems. Deliver the training to the new VMs and
                         supporting
-                        to test the functionalities of AEM. Help to create the training materials. Take part in site
+                        to test the functionalities of AEM. Help to create the training materials. Take part in the site
                         development
                         projects to
                         visual merchandising and user experience. Help with technical upgrade testing and testing the
                         site
                         (mobile,
                         desktop, app) during tech release.</li>
-                    <li>Analyze and generate weekly, monthly, and quarterly report of UX with visualization and build
+                    <li>Analyze and generate weekly, monthly, and quarterly reports of UX with visualization and build
                         strong
-                        action plan to meet selling KPI (Using Google analytics, Power BI and Tableau).</li>
+                        action plan to meet selling KPI (Using Google Analytics, Power BI, and Tableau).</li>
                 </ul>
             </div>
             <!-- end of experience2 -->
             <div id="experience3" class="inner-box">
                 <h2><strong>Lecture & Head teacher</strong></h2>
-                <h2>Different Campaus and school - Kandy, Sri Lanka</h2>
+                <h2>Different Campus and school - Kandy, Sri Lanka</h2>
                 <h3>January 2009 - August 2017</h3>
                 <hr>
 
                 <ul class="inside">
-                    <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex college
+                    <li>Head teacher for the subject ICT and the ICT lab in charge of the Kandy branch of Sussex College
                         network. Team member for the panel of ICT curriculum development and exam paper preparation
                         panel
                         for
@@ -153,15 +157,16 @@
                     </li>
                     <li>Delivered engaging and comprehensive lectures on various Information Technology (IT) subjects,
                         including
-                        programming languages, databases, project management, web development and MS Office (1000+
+                        programming languages, databases, project management, web development, and MS Office (1000+
                         students)
                     </li>
-                    <li>Employed various teaching methodologies, such as lectures, discussions,demonstrations, workshops
+                    <li>Employed various teaching methodologies, such as lectures, discussions, demonstrations,
+                        workshops
                         and
                         multimedia presentations, to facilitate student understanding and engagement</li>
                     <li>Provided guidance and support to students in their academic and career development, offering
                         mentorship
-                        and advice on IT-related topics (200+ students. Most of them work in the IT related industry).
+                        and advice on IT-related topics (200+ students. Most of them work in the IT-related industry).
                     </li>
                 </ul>
             </div>
@@ -291,28 +296,33 @@
                     <hr>
                     <div class="wrapper">
                         <label for="html">HTML</label>
+                        <input id="html" style="display:none">
                         <div class="progress-bar">
-                            <span class="progress-bar-fill" style="width: 88%;" id="html">88%</span>
+                            <span class="progress-bar-fill" style="width: 88%;">88%</span>
                         </div>
 
                         <label for="css">CSS</label>
+                        <input id="css" style="display:none">
                         <div class="progress-bar">
-                            <span class="progress-bar-fill" style="width: 75%;" id="css">75%</span>
+                            <span class="progress-bar-fill" style="width: 75%;">75%</span>
                         </div>
 
                         <label for="js">JavaScript</label>
+                        <input id="js" style="display:none">
                         <div class="progress-bar">
-                            <span class="progress-bar-fill" style="width: 35%;" id="js">35%</span>
+                            <span class="progress-bar-fill" style="width: 35%;">35%</span>
                         </div>
 
                         <label for="php">PHP</label>
+                        <input id="php" style="display:none">
                         <div class="progress-bar">
-                            <span class="progress-bar-fill" style="width: 65%;" id="php">65%</span>
+                            <span class="progress-bar-fill" style="width: 65%;">65%</span>
                         </div>
 
                         <label for="sql">SQL</label>
+                        <input id="sql" style="display:none">
                         <div class="progress-bar">
-                            <span class="progress-bar-fill" style="width: 35%;" id="sql">35%</span>
+                            <span class="progress-bar-fill" style="width: 35%;">35%</span>
                         </div>
                     </div> <!-- end class wrapper -->
                 </div> <!-- end class tech-languages -->
@@ -328,11 +338,9 @@
         <h1><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
 
         <div class="contact-me">
-            <div class="contact-column">
-                <!-- Profile image -->
+            <div class="column">
                 <div id="profile-image">
-                    <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="400%"
-                        height="100%">
+                    <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="200">
                 </div>
 
                 <!-- personal information -->
@@ -358,10 +366,9 @@
                     </ul>
                 </div>
             </div>
-            <!--end of right column comntent (basic info)-->
+            <!--end of right column content (basic info)-->
 
-
-            <div class="contact-column">
+            <div class="column">
                 <form class="contact-form">
                     <fieldset>
                         <div>
