--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navigation">
             <!-- logo on the top left -->
-            <img src="./assets/images/LOGO_AK.jpg" alt="logo" class="logo">
+            <img src="./assets/images/LOGO_AK.jpg" alt="logo" class="logo" width="200" height="300">
             <!-- start of top navigation -->
             <ul>
                 <li>
@@ -56,20 +56,22 @@
     <section class="home-section" id="main">
         <div class="one-third-width-column">
             <!-- image on the left side -->
-            <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img">
+            <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img" width="200"
+                height="300">
         </div>
 
         <div class="two-thirds-width-column vertical-center">
-            <div>
-                <h3>Hey there!</h3>
-            </div>
             <div id="welcome">
-                <p>My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
-                    <strong style="color: #331D2C;"> ANJI. </strong>
-                    <br>
-                    I am a Business Expert and a Scrum Master at H&M Group.<br>
-                    ... and I am just a human who likes to enjoy life!
-                </p>
+                <div>
+                    <h3>Hey there!</h3>
+                    <h1>My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
+                        <strong style="color: #331D2C;"> ANJI. </strong>
+                    </h1>
+
+                    <h3>I am a Business Expert and a Scrum Master at H&M Group.</h3>
+                    <h3>... and I am just a human who likes to enjoy life!</h3>
+
+                </div>
             </div>
         </div>
     </section>
