Fix the responsiveness of the home section for smaller screens

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     <header>
         <nav class="navigation">
             <!-- logo on the top left -->
-            <img src="./assets/images/LOGO_AK.jpg" alt="logo" class="logo" width="200" height="300">
+            <a href="/index.html">
+                <img src="./assets/images/LOGO_AK.webp" alt="logo" class="logo" width="300" height="200"></a>
             <!-- start of top navigation -->
             <ul>
                 <li>
@@ -56,7 +57,7 @@
     <section class="home-section" id="main">
         <div class="one-third-width-column">
             <!-- image on the left side -->
-            <img src="./assets/images/Anji_half_watercolor.jpg" alt="Image of Anjalee" id="profile-img" width="200"
+            <img src="./assets/images/Anji_half_watercolor.webp" alt="Image of Anjalee" id="profile-img" width="200"
                 height="300">
         </div>
 
@@ -342,7 +343,7 @@
         <div class="contact-me">
             <div class="column">
                 <div id="profile-image">
-                    <img src="./assets/images/Anji.jpg" alt="profile image of anjalee kulasinghe" width="200">
+                    <img src="./assets/images/Anji.webp" alt="profile image of anjalee kulasinghe" width="200">
                 </div>
 
                 <!-- personal information -->
