--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header>
         <nav class="navigation">
             <!-- logo on the top left -->
-            <a href="/index.html">
+            <a href="index.html">
                 <img src="./assets/images/LOGO_AK.webp" alt="logo" class="logo" width="300" height="200"></a>
             <!-- start of top navigation -->
             <ul>
