Modi: Move the social media links to the footer section.

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="./assets/css/style.css">
 
-    <title>CV_AK</title>
+    <title>CV_Anjalee</title>
 
 </head>
 
@@ -278,14 +278,14 @@
                         <h2>Tools <i class="fa-solid fa-screwdriver-wrench"></i></h2>
                         <hr>
                         <div class="grid-container">
-                            <div class="item1">MS office</div>
-                            <div class="item2">Visual studio</div>
-                            <div class="item3">3D Max</div>
-                            <div class="item4">Corel Draw</div>
-                            <div class="item5">Photoshop</div>
-                            <div class="item6">Adobe Premiere Pro</div>
-                            <div class="item7">After Effects</div>
-                            <div class="item8">Flash</div>
+                            <div class="item">MS office</div>
+                            <div class="item">Visual studio</div>
+                            <div class="item">3D Max</div>
+                            <div class="item">Corel Draw</div>
+                            <div class="item">Photoshop</div>
+                            <div class="item">Adobe Premiere Pro</div>
+                            <div class="item">After Effects</div>
+                            <div class="item">Flash</div>
                         </div>
                         <br>
                     </div> <!-- end tools class -->
@@ -299,31 +299,31 @@
                     <hr>
                     <div class="wrapper">
                         <label for="html">HTML</label>
-                        <input id="html" style="display:none">
+                        <input id="html" class="lable-id">
                         <div class="progress-bar">
                             <span class="progress-bar-fill" style="width: 88%;">88%</span>
                         </div>
 
                         <label for="css">CSS</label>
-                        <input id="css" style="display:none">
+                        <input id="css" class="lable-id">
                         <div class="progress-bar">
                             <span class="progress-bar-fill" style="width: 75%;">75%</span>
                         </div>
 
                         <label for="js">JavaScript</label>
-                        <input id="js" style="display:none">
+                        <input id="js" class="lable-id">
                         <div class="progress-bar">
                             <span class="progress-bar-fill" style="width: 35%;">35%</span>
                         </div>
 
                         <label for="php">PHP</label>
-                        <input id="php" style="display:none">
+                        <input id="php" class="lable-id">
                         <div class="progress-bar">
                             <span class="progress-bar-fill" style="width: 65%;">65%</span>
                         </div>
 
                         <label for="sql">SQL</label>
-                        <input id="sql" style="display:none">
+                        <input id="sql" class="lable-id">
                         <div class="progress-bar">
                             <span class="progress-bar-fill" style="width: 35%;">35%</span>
                         </div>
@@ -353,20 +353,8 @@
                     <br>
                     <p>Mobile: +46 704 731 773</p>
                     <p>Email: anjaleek@gmail.com</p>
-                    <br>
-                </div>
+                    <p>Address: Stenbockens gata 121, 13662 Haninge, Sweden</p>
 
-                <!-- social media links -->
-                <div>
-                    <ul class="social-networks">
-                        <li><a href="https://www.linkedin.com/in/anjalee-kulasinghe/" target="_blank"><i
-                                    class="fa-brands fa-linkedin"></i></a></li>
-                        <li><a href="https://www.facebook.com/anjalee.kulasinghe" target="_blank"><i
-                                    class="fab fa-facebook"></i></a></li>
-                        <li><a href="https://www.instagram.com/anji_kulasinghe/" target="_blank"><i
-                                    class="fab fa-instagram"></i></a>
-                        </li>
-                    </ul>
                 </div>
             </div>
             <!--end of right column content (basic info)-->
@@ -412,6 +400,20 @@
 
     <!-- footer section start -->
     <footer class="text-uppercase">
+        <!-- social media links -->
+        <div>
+            <ul class="social-networks">
+                <li><a href="https://www.linkedin.com/in/anjalee-kulasinghe/" target="_blank"><i
+                            class="fa-brands fa-linkedin"></i></a></li>
+                <li><a href="https://www.facebook.com/anjalee.kulasinghe" target="_blank"><i
+                            class="fab fa-facebook"></i></a>
+                </li>
+                <li><a href="https://www.instagram.com/anji_kulasinghe/" target="_blank"><i
+                            class="fab fa-instagram"></i></a>
+                </li>
+            </ul>
+        </div>
+
         <p>Copyright © by Anjalee Kulasinghe 2023</p>
     </footer>
     <!-- footer section end -->
