--- a/index.html
+++ b/index.html
@@ -55,23 +55,17 @@
 
     <!-- start of the home section -->
     <section class="home-section" id="main">
-        <div class="one-third-width-column">
-            <!-- image on the left side -->
-            <img src="./assets/images/Anji_half_watercolor.webp" alt="Image of Anjalee" id="profile-img" width="200"
-                height="300">
-        </div>
-
-        <div class="two-thirds-width-column vertical-center">
-            <div id="welcome">
-                <div>
-                    <h3>Hey there!</h3>
-                    <h1>My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you can call me
+        <div class="home-image">
+            <img class="image-anji" src="./assets/images/Anji_watercolor.webp" alt="Image of Anjalee" />
+            <div class="image-anji-overlay">
+                <div class="welcome-message">
+                    <h3 class="heding3">Hey there!</h3>
+                    <h1 class="heding1">My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you
+                        can call me
                         <strong style="color: #331D2C;"> ANJI. </strong>
                     </h1>
-
-                    <h3>I am a Business Expert and a Scrum Master at H&M Group.</h3>
-                    <h3>... and I am just a human who likes to enjoy life!</h3>
-
+                    <h3 class="heding3">I am a Business Expert and a Scrum Master at H&M Group.</h3>
+                    <h3 class="heding3">... and I am just a human who likes to enjoy life!</h3>
                 </div>
             </div>
         </div>
@@ -82,12 +76,12 @@
 
     <!-- start of the experience section -->
     <section class="experience-section" id="experience">
-        <h1>Experience <i class="fa-solid fa-briefcase"></i></h1>
+        <h1 class="heding1">Experience <i class="fa-solid fa-briefcase"></i></h1>
         <div>
             <div id="experience1" class="inner-box">
-                <h2><strong>Expert & Scrum Master</strong></h2>
-                <h2>H&M Group - Stockholm, Sweden</h2>
-                <h3>May 2021 - Present</h3>
+                <h2 class="heding2"><strong>Expert & Scrum Master</strong></h2>
+                <h2 class="heding2">H&M Group - Stockholm, Sweden</h2>
+                <h3 class="heding3">May 2021 - Present</h3>
                 <hr>
 
                 <p>Replenishment Precision is a product under Inventory optimization (SAP ECC module). The product
@@ -113,9 +107,9 @@
             <!-- end of experience1 -->
 
             <div id="experience2" class="inner-box">
-                <h2><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
-                <h2>H&M - Stockholm, Sweden</h2>
-                <h3>December 2018 - May 2021</h3>
+                <h2 class="heding2"><strong>Visual Merchandiser for H&M Men and H&M Home</strong></h2>
+                <h2 class="heding2">H&M - Stockholm, Sweden</h2>
+                <h3 class="heding3">December 2018 - May 2021</h3>
                 <hr>
 
                 <ul class="inside">
@@ -146,9 +140,9 @@
             </div>
             <!-- end of experience2 -->
             <div id="experience3" class="inner-box">
-                <h2><strong>Lecture & Head teacher</strong></h2>
-                <h2>Different Campus and school - Kandy, Sri Lanka</h2>
-                <h3>January 2009 - August 2017</h3>
+                <h2 class="heding2"><strong>Lecture & Head teacher</strong></h2>
+                <h2 class="heding2">Different Campus and school - Kandy, Sri Lanka</h2>
+                <h3 class="heding3">January 2009 - August 2017</h3>
                 <hr>
 
                 <ul class="inside">
@@ -182,7 +176,7 @@
 
     <!-- start of the education section -->
     <section class="education-section" id="education">
-        <h1><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
+        <h1 class="heding1"><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
         <div>
             <div class="education-box">
                 <ul>
@@ -231,31 +225,31 @@
 
     <!-- start of the skills and expertise section -->
     <section class="skills-section" id="skills">
-        <h1><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
+        <h1 class="heding1"><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
         <br>
 
         <div id="expertise">
             <div>
                 <!-- expertise / soft skills -->
-                <h2>Expertise</h2>
+                <h2 class="heding2">Expertise</h2>
                 <div class="skill-box">
-                    <h3>Resilience</h3>
+                    <h3 class="heding3">Resilience</h3>
                 </div>
 
                 <div class="skill-box">
-                    <h3>Communication</h3>
+                    <h3 class="heding3">Communication</h3>
                 </div>
 
                 <div class="skill-box">
-                    <h3>Teamwork</h3>
+                    <h3 class="heding3">Teamwork</h3>
                 </div>
 
                 <div class="skill-box">
-                    <h3>Adaptability</h3>
+                    <h3 class="heding3">Adaptability</h3>
                 </div>
 
                 <div class="skill-box">
-                    <h3>Leadership and Coaching</h3>
+                    <h3 class="heding3">Leadership and Coaching</h3>
                 </div>
             </div>
         </div><!-- end expertiseexpertise -->
@@ -264,7 +258,7 @@
             <div class="column">
                 <div class="human-language-tools-box">
                     <div class="human-language">
-                        <h2>Language skills (human) <i class="fa-solid fa-globe"></i></h2>
+                        <h2 class="heding2">Language skills (human) <i class="fa-solid fa-globe"></i></h2>
                         <hr>
                         <ul>
                             <li><strong class="hidden-small">Sinhala: </strong>Native</li>
@@ -275,7 +269,7 @@
                     </div> <!-- end human-language class -->
                     <br>
                     <div class="tools">
-                        <h2>Tools <i class="fa-solid fa-screwdriver-wrench"></i></h2>
+                        <h2 class="heding2">Tools <i class="fa-solid fa-screwdriver-wrench"></i></h2>
                         <hr>
                         <div class="grid-container">
                             <div class="item">MS office</div>
@@ -295,7 +289,7 @@
 
             <div class="column">
                 <div class="tech-languages">
-                    <h2>Tech Languages <i class="fa-solid fa-microchip"></i></h2>
+                    <h2 class="heding2">Tech Languages <i class="fa-solid fa-microchip"></i></h2>
                     <hr>
                     <div class="wrapper">
                         <label for="html">HTML</label>
@@ -338,7 +332,7 @@
 
     <!-- contact section start -->
     <section class="contact-section" id="contact">
-        <h1><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
+        <h1 class="heding1"><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
 
         <div class="contact-me">
             <div class="column">
@@ -348,8 +342,9 @@
 
                 <!-- personal information -->
                 <div id="personal-information">
-                    <h2>Anjalee Kulasinghe</h2>
-                    <h3>Business and Requirement Analysis | Business Expert | Scrum Master | Project Manager</h3>
+                    <h2 class="heding2">Anjalee Kulasinghe</h2>
+                    <h3 class="heding3">Business and Requirement Analysis | Business Expert | Scrum Master | Project
+                        Manager</h3>
                     <br>
                     <p>Mobile: +46 704 731 773</p>
                     <p>Email: anjaleek@gmail.com</p>
