--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <!-- start of the experience section -->
     <section class="experience-section" id="experience">
-        <h1 class="heding1">Experience <i class="fa-solid fa-briefcase"></i></h1>
+        <h1 class="heding1 heading-transform">Experience <i class="fa-solid fa-briefcase"></i></h1>
         <div>
             <div id="experience1" class="inner-box">
                 <h2 class="heding2"><strong>Expert & Scrum Master</strong></h2>
@@ -176,7 +176,7 @@
 
     <!-- start of the education section -->
     <section class="education-section" id="education">
-        <h1 class="heding1"><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
+        <h1 class="heding1 heading-transform"><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
         <div>
             <div class="education-box">
                 <ul>
@@ -225,7 +225,7 @@
 
     <!-- start of the skills and expertise section -->
     <section class="skills-section" id="skills">
-        <h1 class="heding1"><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
+        <h1 class="heding1 heading-transform"><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
         <br>
 
         <div id="expertise">
@@ -332,7 +332,7 @@
 
     <!-- contact section start -->
     <section class="contact-section" id="contact">
-        <h1 class="heding1"><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
+        <h1 class="heding1 heading-transform"><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
 
         <div class="contact-me">
             <div class="column">
