Modi: the style sheet for the home section.

--- a/index.html
+++ b/index.html
@@ -56,13 +56,14 @@
     <!-- start of the home section -->
     <section class="home-section" id="main">
         <div class="home-image">
-            <img class="image-anji" src="./assets/images/Anji_watercolor.webp" alt="Image of Anjalee" />
+            <img class="image-anji" src="./assets/images/Anji_BG_image.jpg" alt="Image of Anjalee" width="900"
+                height="600">
             <div class="image-anji-overlay">
                 <div class="welcome-message">
                     <h3 class="heding3">Hey there!</h3>
-                    <h1 class="heding1">My name is <strong style="color: #331D2C;"> ANJALEE KULASINGHE </strong> or you
+                    <h1 class="heding1">My name is <strong> ANJALEE KULASINGHE</strong> or you
                         can call me
-                        <strong style="color: #331D2C;"> ANJI. </strong>
+                        <strong> ANJI.</strong>
                     </h1>
                     <h3 class="heding3">I am a Business Expert and a Scrum Master at H&M Group.</h3>
                     <h3 class="heding3">... and I am just a human who likes to enjoy life!</h3>
@@ -176,7 +177,7 @@
 
     <!-- start of the education section -->
     <section class="education-section" id="education">
-        <h1 class="heding1 heading-transform"><strong>Education <i class="fa-solid fa-user-graduate"></i></strong></h1>
+        <h1 class="heding1 heading-transform">Education <i class="fa-solid fa-user-graduate"></i></h1>
         <div>
             <div class="education-box">
                 <ul>
@@ -225,13 +226,14 @@
 
     <!-- start of the skills and expertise section -->
     <section class="skills-section" id="skills">
-        <h1 class="heding1 heading-transform"><strong>Skills and Expertise <i class="fa-solid fa-gear"></i></strong></h1>
+        <h1 class="heding1 heading-transform">Skills and Expertise <i class="fa-solid fa-gear"></i>
+        </h1>
         <br>
 
         <div id="expertise">
             <div>
                 <!-- expertise / soft skills -->
-                <h2 class="heding2">Expertise</h2>
+                <h2 class="heding2">Expertise <i class="fa-solid fa-award"></i></h2>
                 <div class="skill-box">
                     <h3 class="heding3">Resilience</h3>
                 </div>
@@ -332,7 +334,7 @@
 
     <!-- contact section start -->
     <section class="contact-section" id="contact">
-        <h1 class="heding1 heading-transform"><strong>Contact Me <i class="fa-solid fa-comment-dots"></i></strong></h1>
+        <h1 class="heding1 heading-transform">Contact Me <i class="fa-solid fa-comment-dots"></i></h1>
 
         <div class="contact-me">
             <div class="column">
@@ -349,7 +351,7 @@
                     <p>Mobile: +46 704 731 773</p>
                     <p>Email: anjaleek@gmail.com</p>
                     <p>Address: Stenbockens gata 121, 13662 Haninge, Sweden</p>
-
+                    <br>
                 </div>
             </div>
             <!--end of right column content (basic info)-->
