--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     <!-- start of the home section -->
     <section class="home-section" id="main">
         <div class="home-image">
-            <img class="image-anji" src="./assets/images/Anji_BG_image.jpg" alt="Image of Anjalee" width="900"
+            <img class="image-anji" src="./assets/images/Anji_BG_image.webp" alt="Image of Anjalee" width="900"
                 height="600">
             <div class="image-anji-overlay">
                 <div class="welcome-message">
