--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <h1 class="heding1 heading-transform">Experience <i class="fa-solid fa-briefcase"></i></h1>
         <div>
             <div id="experience1" class="inner-box">
-                <h2 class="heding2"><strong>Expert & Scrum Master</strong></h2>
+                <h2 class="heding2"><strong>Business Expert & Scrum Master</strong></h2>
                 <h2 class="heding2">H&M Group - Stockholm, Sweden</h2>
                 <h3 class="heding3">May 2021 - Present</h3>
                 <hr>
